--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "i18n-tag-next-plugin",
+  "name": "@wearedevx/i18n-tag-next-plugin",
   "version": "1.0.0",
   "description": "",
   "main": "lib/index.js",
