--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@wearedevx/i18n-tag-next-plugin",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
+    "build": "babel src --out-dir lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
