--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "i18n-tag-wrapper": "git+https://daedb446c2bb68ed23012733e51e6ec35bd01f3c:x-oauth-basic@github.com/wearedevx/i18n-tag-wrapper.git",
+    "@wearedevx/i18n-tag-wrapper": "git+https://daedb446c2bb68ed23012733e51e6ec35bd01f3c:x-oauth-basic@github.com/wearedevx/i18n-tag-wrapper.git",
     "next": "^9.0.0",
     "react": "^16.8.6"
   },
